...
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cardAcciones" />

    <!-- GridView para las categorías en cuadrícula de 2 columnas -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vistaLista"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/tituloLista"
...
